--- a/googleauth/package.json
+++ b/googleauth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "creative-design",
+  "name": "googleauth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,6 @@
     "firebase": "^10.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
